@@ -3,7 +3,7 @@
 /***************************************************************
  * Extension Manager/Repository config file for ext "oelib".
  *
- * Auto generated 25-02-2014 18:59
+ * Auto generated 14-04-2014 14:45
  *
  * Manual updates:
  * Only the data in the array - everything else is removed by next
@@ -32,18 +32,18 @@ $EM_CONF[$_EXTKEY] = array(
 	'CGLcompliance' => '',
 	'CGLcompliance_note' => '',
 	'author_company' => 'oliverklee.de',
-	'version' => '0.7.73',
-	'_md5_values_when_last_written' => 'a:195:{s:13:"changelog.txt";s:4:"c0ac";s:38:"class.tx_oelib_abstractHeaderProxy.php";s:4:"1e7d";s:33:"class.tx_oelib_abstractMailer.php";s:4:"75c0";s:29:"class.tx_oelib_Attachment.php";s:4:"d3a8";s:29:"class.tx_oelib_Autoloader.php";s:4:"1e15";s:38:"class.tx_oelib_BackEndLoginManager.php";s:4:"8cb9";s:30:"class.tx_oelib_configcheck.php";s:4:"ddb1";s:32:"class.tx_oelib_Configuration.php";s:4:"04e1";s:37:"class.tx_oelib_configurationProxy.php";s:4:"6092";s:40:"class.tx_oelib_ConfigurationRegistry.php";s:4:"d995";s:29:"class.tx_oelib_DataMapper.php";s:4:"79f2";s:21:"class.tx_oelib_db.php";s:4:"28f7";s:35:"class.tx_oelib_Double3Validator.php";s:4:"2c79";s:33:"class.tx_oelib_emailCollector.php";s:4:"22eb";s:30:"class.tx_oelib_FakeSession.php";s:4:"abb2";s:32:"class.tx_oelib_FileFunctions.php";s:4:"2730";s:39:"class.tx_oelib_FrontEndLoginManager.php";s:4:"e565";s:34:"class.tx_oelib_headerCollector.php";s:4:"b47c";s:37:"class.tx_oelib_headerProxyFactory.php";s:4:"e7e7";s:30:"class.tx_oelib_IdentityMap.php";s:4:"cb3b";s:23:"class.tx_oelib_List.php";s:4:"139f";s:23:"class.tx_oelib_Mail.php";s:4:"12f1";s:32:"class.tx_oelib_mailerFactory.php";s:4:"98eb";s:33:"class.tx_oelib_MapperRegistry.php";s:4:"10f8";s:24:"class.tx_oelib_Model.php";s:4:"b956";s:25:"class.tx_oelib_Object.php";s:4:"bc8e";s:32:"class.tx_oelib_ObjectFactory.php";s:4:"8fcd";s:29:"class.tx_oelib_PageFinder.php";s:4:"4542";s:31:"class.tx_oelib_PublicObject.php";s:4:"66f4";s:34:"class.tx_oelib_realHeaderProxy.php";s:4:"2bd3";s:29:"class.tx_oelib_realMailer.php";s:4:"b041";s:37:"class.tx_oelib_salutationswitcher.php";s:4:"de6a";s:26:"class.tx_oelib_Session.php";s:4:"960c";s:27:"class.tx_oelib_Template.php";s:4:"00e0";s:33:"class.tx_oelib_templatehelper.php";s:4:"cec1";s:35:"class.tx_oelib_TemplateRegistry.php";s:4:"2121";s:35:"class.tx_oelib_testingFramework.php";s:4:"e647";s:42:"class.tx_oelib_TestingFrameworkCleanup.php";s:4:"db7d";s:24:"class.tx_oelib_Timer.php";s:4:"2112";s:29:"class.tx_oelib_Translator.php";s:4:"1406";s:37:"class.tx_oelib_TranslatorRegistry.php";s:4:"2764";s:16:"ext_autoload.php";s:4:"623f";s:12:"ext_icon.gif";s:4:"b4bf";s:17:"ext_localconf.php";s:4:"77dd";s:14:"ext_tables.php";s:4:"b6e0";s:14:"ext_tables.sql";s:4:"3b2f";s:22:"icon_tx_oelib_test.gif";s:4:"bd58";s:16:"locallang_db.xml";s:4:"a70b";s:7:"tca.php";s:4:"26bb";s:8:"Time.php";s:4:"00bd";s:28:"tx_oelib_commonConstants.php";s:4:"b171";s:32:"Classes/Domain/Model/Country.php";s:4:"8681";s:37:"Classes/Domain/Model/FederalState.php";s:4:"50c7";s:56:"Classes/Domain/Repository/AbstractReadOnlyRepository.php";s:4:"9c3b";s:47:"Classes/Domain/Repository/CountryRepository.php";s:4:"1a78";s:52:"Classes/Domain/Repository/FederalStateRepository.php";s:4:"5021";s:44:"Classes/ViewHelpers/GoogleMapsViewHelper.php";s:4:"24e7";s:45:"Classes/ViewHelpers/ImageSourceViewHelper.php";s:4:"4fd1";s:43:"Classes/ViewHelpers/UppercaseViewHelper.php";s:4:"fe22";s:38:"Configuration/TypoScript/constants.txt";s:4:"d41d";s:34:"Configuration/TypoScript/setup.txt";s:4:"5e3c";s:51:"Exception/class.tx_oelib_Exception_AccessDenied.php";s:4:"0c1e";s:47:"Exception/class.tx_oelib_Exception_Database.php";s:4:"2064";s:55:"Exception/class.tx_oelib_Exception_EmptyQueryResult.php";s:4:"7174";s:47:"Exception/class.tx_oelib_Exception_NotFound.php";s:4:"3b07";s:24:"Geocoding/Calculator.php";s:4:"d7df";s:19:"Geocoding/Dummy.php";s:4:"cc56";s:20:"Geocoding/Google.php";s:4:"cbb2";s:46:"Interface/class.tx_oelib_Interface_Address.php";s:4:"1c71";s:42:"Interface/class.tx_oelib_Interface_Geo.php";s:4:"5def";s:51:"Interface/class.tx_oelib_Interface_LoginManager.php";s:4:"e172";s:47:"Interface/class.tx_oelib_Interface_MailRole.php";s:4:"8e3a";s:29:"Interface/GeocodingLookup.php";s:4:"9959";s:22:"Interface/Identity.php";s:4:"8aad";s:22:"Interface/MapPoint.php";s:4:"83cb";s:22:"Interface/Sortable.php";s:4:"1f6a";s:44:"Mapper/class.tx_oelib_Mapper_BackEndUser.php";s:4:"27b1";s:49:"Mapper/class.tx_oelib_Mapper_BackEndUserGroup.php";s:4:"a253";s:40:"Mapper/class.tx_oelib_Mapper_Country.php";s:4:"3cc3";s:41:"Mapper/class.tx_oelib_Mapper_Currency.php";s:4:"e0cc";s:45:"Mapper/class.tx_oelib_Mapper_FrontEndUser.php";s:4:"3ff6";s:50:"Mapper/class.tx_oelib_Mapper_FrontEndUserGroup.php";s:4:"5bd5";s:41:"Mapper/class.tx_oelib_Mapper_Language.php";s:4:"143f";s:23:"Mapper/FederalState.php";s:4:"9516";s:42:"Model/class.tx_oelib_Model_BackEndUser.php";s:4:"b2dc";s:47:"Model/class.tx_oelib_Model_BackEndUserGroup.php";s:4:"70cf";s:38:"Model/class.tx_oelib_Model_Country.php";s:4:"2251";s:39:"Model/class.tx_oelib_Model_Currency.php";s:4:"231c";s:43:"Model/class.tx_oelib_Model_FrontEndUser.php";s:4:"133a";s:48:"Model/class.tx_oelib_Model_FrontEndUserGroup.php";s:4:"a3cd";s:39:"Model/class.tx_oelib_Model_Language.php";s:4:"fdf6";s:22:"Model/FederalState.php";s:4:"792b";s:40:"Resources/Private/Language/locallang.xml";s:4:"0494";s:29:"Tests/Unit/AttachmentTest.php";s:4:"5e49";s:29:"Tests/Unit/AutoloaderTest.php";s:4:"2d13";s:38:"Tests/Unit/BackEndLoginManagerTest.php";s:4:"3dfb";s:30:"Tests/Unit/ConfigCheckTest.php";s:4:"ddc8";s:37:"Tests/Unit/ConfigurationProxyTest.php";s:4:"401c";s:40:"Tests/Unit/ConfigurationRegistryTest.php";s:4:"db10";s:32:"Tests/Unit/ConfigurationTest.php";s:4:"1b95";s:29:"Tests/Unit/DataMapperTest.php";s:4:"7b6e";s:21:"Tests/Unit/DbTest.php";s:4:"59c5";s:35:"Tests/Unit/Double3ValidatorTest.php";s:4:"0a41";s:37:"Tests/Unit/Exception_DatabaseTest.php";s:4:"e4c2";s:30:"Tests/Unit/FakeSessionTest.php";s:4:"2f48";s:39:"Tests/Unit/FrontEndLoginManagerTest.php";s:4:"9fc0";s:37:"Tests/Unit/HeaderProxyFactoryTest.php";s:4:"9ea1";s:30:"Tests/Unit/IdentityMapTest.php";s:4:"4db4";s:23:"Tests/Unit/ListTest.php";s:4:"feba";s:32:"Tests/Unit/MailerFactoryTest.php";s:4:"b2f2";s:23:"Tests/Unit/MailTest.php";s:4:"387a";s:33:"Tests/Unit/MapperRegistryTest.php";s:4:"4846";s:24:"Tests/Unit/ModelTest.php";s:4:"75a2";s:32:"Tests/Unit/ObjectFactoryTest.php";s:4:"8fce";s:25:"Tests/Unit/ObjectTest.php";s:4:"0b1d";s:29:"Tests/Unit/PageFinderTest.php";s:4:"ee84";s:29:"Tests/Unit/PhpMyAdminTest.php";s:4:"ad3a";s:37:"Tests/Unit/SalutationSwitcherTest.php";s:4:"4f03";s:26:"Tests/Unit/SessionTest.php";s:4:"dfe2";s:33:"Tests/Unit/TemplateHelperTest.php";s:4:"7670";s:35:"Tests/Unit/TemplateRegistryTest.php";s:4:"58c2";s:27:"Tests/Unit/TemplateTest.php";s:4:"31aa";s:35:"Tests/Unit/TestingFrameworkTest.php";s:4:"e68a";s:24:"Tests/Unit/TimerTest.php";s:4:"ff3d";s:37:"Tests/Unit/TranslatorRegistryTest.php";s:4:"c233";s:29:"Tests/Unit/TranslatorTest.php";s:4:"ef01";s:39:"Tests/Unit/Domain/Model/CountryTest.php";s:4:"4a64";s:44:"Tests/Unit/Domain/Model/FederalStateTest.php";s:4:"d301";s:54:"Tests/Unit/Domain/Repository/CountryRepositoryTest.php";s:4:"755e";s:59:"Tests/Unit/Domain/Repository/FederalStateRepositoryTest.php";s:4:"bc09";s:45:"Tests/Unit/Exception/EmptyQueryResultTest.php";s:4:"1093";s:70:"Tests/Unit/Fixtures/class.tx_oelib_Tests_Unit_Fixtures_NotIncluded.php";s:4:"0bf4";s:76:"Tests/Unit/Fixtures/class.Tx_Oelib_Tests_Unit_Fixtures_NotIncludedEither.php";s:4:"b23f";s:84:"Tests/Unit/Fixtures/class.Tx_oelib_Tests_Unit_Fixtures_NotIncludedFirstUppercase.php";s:4:"a384";s:91:"Tests/Unit/Fixtures/class.Tx_Oelib_Tests_Unit_Fixtures_NotIncludedUppercaseExtensionKey.php";s:4:"37a7";s:47:"Tests/Unit/Fixtures/ColumnLessTestingMapper.php";s:4:"67c6";s:42:"Tests/Unit/Fixtures/DummyObjectToCheck.php";s:4:"c4a3";s:29:"Tests/Unit/Fixtures/Empty.php";s:4:"c2fe";s:33:"Tests/Unit/Fixtures/locallang.xml";s:4:"c52b";s:46:"Tests/Unit/Fixtures/ModelLessTestingMapper.php";s:4:"1f24";s:30:"Tests/Unit/Fixtures/oelib.html";s:4:"59ca";s:37:"Tests/Unit/Fixtures/ReadOnlyModel.php";s:4:"dced";s:46:"Tests/Unit/Fixtures/TableLessTestingMapper.php";s:4:"279c";s:28:"Tests/Unit/Fixtures/test.css";s:4:"0acf";s:28:"Tests/Unit/Fixtures/test.png";s:4:"c7b6";s:30:"Tests/Unit/Fixtures/test_2.css";s:4:"4a4a";s:42:"Tests/Unit/Fixtures/TestingChildMapper.php";s:4:"42b3";s:41:"Tests/Unit/Fixtures/TestingChildModel.php";s:4:"a225";s:34:"Tests/Unit/Fixtures/TestingGeo.php";s:4:"8e05";s:39:"Tests/Unit/Fixtures/TestingMailRole.php";s:4:"39db";s:37:"Tests/Unit/Fixtures/TestingMapper.php";s:4:"f155";s:39:"Tests/Unit/Fixtures/TestingMapPoint.php";s:4:"8be0";s:36:"Tests/Unit/Fixtures/TestingModel.php";s:4:"be63";s:37:"Tests/Unit/Fixtures/TestingObject.php";s:4:"eca2";s:49:"Tests/Unit/Fixtures/TestingSalutationSwitcher.php";s:4:"bdd4";s:45:"Tests/Unit/Fixtures/TestingTemplateHelper.php";s:4:"ba68";s:38:"Tests/Unit/Fixtures/user_oelibtest.t3x";s:4:"e80d";s:39:"Tests/Unit/Fixtures/user_oelibtest2.t3x";s:4:"56c7";s:36:"Tests/Unit/Fixtures/Xclass/Empty.php";s:4:"147c";s:79:"Tests/Unit/Fixtures/pi1/class.Tx_Oelib_Tests_Unit_Fixtures_pi1_NotIncluded1.php";s:4:"2222";s:39:"Tests/Unit/Geocoding/CalculatorTest.php";s:4:"7ed4";s:34:"Tests/Unit/Geocoding/DummyTest.php";s:4:"6662";s:35:"Tests/Unit/Geocoding/GoogleTest.php";s:4:"5cbd";s:42:"Tests/Unit/Mapper/BackEndUserGroupTest.php";s:4:"965b";s:37:"Tests/Unit/Mapper/BackEndUserTest.php";s:4:"1623";s:33:"Tests/Unit/Mapper/CountryTest.php";s:4:"3ada";s:34:"Tests/Unit/Mapper/CurrencyTest.php";s:4:"24e6";s:38:"Tests/Unit/Mapper/FederalStateTest.php";s:4:"c992";s:43:"Tests/Unit/Mapper/FrontEndUserGroupTest.php";s:4:"c0ca";s:38:"Tests/Unit/Mapper/FrontEndUserTest.php";s:4:"c04f";s:34:"Tests/Unit/Mapper/LanguageTest.php";s:4:"2e27";s:41:"Tests/Unit/Model/BackEndUserGroupTest.php";s:4:"afe3";s:36:"Tests/Unit/Model/BackEndUserTest.php";s:4:"4c91";s:32:"Tests/Unit/Model/CountryTest.php";s:4:"3941";s:33:"Tests/Unit/Model/CurrencyTest.php";s:4:"0aa7";s:37:"Tests/Unit/Model/FederalStateTest.php";s:4:"7364";s:42:"Tests/Unit/Model/FrontEndUserGroupTest.php";s:4:"2510";s:37:"Tests/Unit/Model/FrontEndUserTest.php";s:4:"f53c";s:33:"Tests/Unit/Model/LanguageTest.php";s:4:"6d54";s:35:"Tests/Unit/ViewHelper/PriceTest.php";s:4:"59e3";s:51:"Tests/Unit/ViewHelpers/GoogleMapsViewHelperTest.php";s:4:"9ba0";s:52:"Tests/Unit/ViewHelpers/ImageSourceViewHelperTest.php";s:4:"1b02";s:50:"Tests/Unit/ViewHelpers/UppercaseViewHelperTest.php";s:4:"4783";s:34:"Tests/Unit/Visibility/NodeTest.php";s:4:"f77b";s:34:"Tests/Unit/Visibility/TreeTest.php";s:4:"46ab";s:46:"ViewHelper/class.tx_oelib_ViewHelper_Price.php";s:4:"684f";s:45:"Visibility/class.tx_oelib_Visibility_Node.php";s:4:"fb20";s:45:"Visibility/class.tx_oelib_Visibility_Tree.php";s:4:"b01f";s:21:"contrib/PEAR/PEAR.php";s:4:"d5a4";s:22:"contrib/PEAR/PEAR5.php";s:4:"124a";s:26:"contrib/PEAR/Mail/mime.php";s:4:"55ee";s:30:"contrib/PEAR/Mail/mimePart.php";s:4:"3705";s:33:"contrib/emogrifier/emogrifier.php";s:4:"661a";s:30:"contrib/emogrifier/LICENSE.TXT";s:4:"8403";s:14:"doc/manual.sxw";s:4:"038f";}',
+	'version' => '0.7.74',
+	'_md5_values_when_last_written' => 'a:208:{s:13:"changelog.txt";s:4:"9f96";s:29:"class.tx_oelib_Autoloader.php";s:4:"394f";s:35:"class.tx_oelib_Double3Validator.php";s:4:"184d";s:34:"class.tx_oelib_headerCollector.php";s:4:"b47c";s:37:"class.tx_oelib_headerProxyFactory.php";s:4:"89fd";s:30:"class.tx_oelib_IdentityMap.php";s:4:"0087";s:23:"class.tx_oelib_List.php";s:4:"e7c1";s:23:"class.tx_oelib_Mail.php";s:4:"91ff";s:32:"class.tx_oelib_mailerFactory.php";s:4:"d6ff";s:33:"class.tx_oelib_MapperRegistry.php";s:4:"7c7d";s:24:"class.tx_oelib_Model.php";s:4:"27e1";s:25:"class.tx_oelib_Object.php";s:4:"bc8e";s:32:"class.tx_oelib_ObjectFactory.php";s:4:"5e97";s:29:"class.tx_oelib_PageFinder.php";s:4:"8a49";s:31:"class.tx_oelib_PublicObject.php";s:4:"66f4";s:34:"class.tx_oelib_realHeaderProxy.php";s:4:"2bd3";s:29:"class.tx_oelib_realMailer.php";s:4:"b041";s:37:"class.tx_oelib_salutationswitcher.php";s:4:"3351";s:26:"class.tx_oelib_Session.php";s:4:"7710";s:27:"class.tx_oelib_Template.php";s:4:"ae8c";s:33:"class.tx_oelib_templatehelper.php";s:4:"e868";s:35:"class.tx_oelib_TemplateRegistry.php";s:4:"b3a9";s:35:"class.tx_oelib_testingFramework.php";s:4:"7248";s:42:"class.tx_oelib_TestingFrameworkCleanup.php";s:4:"db7d";s:24:"class.tx_oelib_Timer.php";s:4:"134f";s:29:"class.tx_oelib_Translator.php";s:4:"1406";s:37:"class.tx_oelib_TranslatorRegistry.php";s:4:"d801";s:16:"ext_autoload.php";s:4:"10c7";s:12:"ext_icon.gif";s:4:"b4bf";s:17:"ext_localconf.php";s:4:"77dd";s:14:"ext_tables.php";s:4:"b6e0";s:14:"ext_tables.sql";s:4:"3b2f";s:22:"icon_tx_oelib_test.gif";s:4:"bd58";s:16:"locallang_db.xml";s:4:"a70b";s:7:"tca.php";s:4:"26bb";s:8:"Time.php";s:4:"00bd";s:28:"tx_oelib_commonConstants.php";s:4:"65f6";s:31:"Classes/AbstractHeaderProxy.php";s:4:"d05f";s:26:"Classes/AbstractMailer.php";s:4:"6a26";s:22:"Classes/Attachment.php";s:4:"76c4";s:31:"Classes/BackEndLoginManager.php";s:4:"446e";s:23:"Classes/ConfigCheck.php";s:4:"9cb4";s:25:"Classes/Configuration.php";s:4:"3344";s:30:"Classes/ConfigurationProxy.php";s:4:"ba47";s:33:"Classes/ConfigurationRegistry.php";s:4:"fb94";s:22:"Classes/DataMapper.php";s:4:"c4af";s:14:"Classes/Db.php";s:4:"defd";s:28:"Classes/Double3Validator.php";s:4:"0f78";s:26:"Classes/EmailCollector.php";s:4:"bbf0";s:23:"Classes/FakeSession.php";s:4:"ffd1";s:25:"Classes/FileFunctions.php";s:4:"268f";s:32:"Classes/FrontEndLoginManager.php";s:4:"7238";s:32:"Classes/Domain/Model/Country.php";s:4:"8681";s:37:"Classes/Domain/Model/FederalState.php";s:4:"50c7";s:56:"Classes/Domain/Repository/AbstractReadOnlyRepository.php";s:4:"9c3b";s:47:"Classes/Domain/Repository/CountryRepository.php";s:4:"1a78";s:52:"Classes/Domain/Repository/FederalStateRepository.php";s:4:"5021";s:44:"Classes/ViewHelpers/GoogleMapsViewHelper.php";s:4:"d79a";s:45:"Classes/ViewHelpers/ImageSourceViewHelper.php";s:4:"4fd1";s:43:"Classes/ViewHelpers/UppercaseViewHelper.php";s:4:"fe22";s:38:"Configuration/TypoScript/constants.txt";s:4:"d41d";s:34:"Configuration/TypoScript/setup.txt";s:4:"5e3c";s:51:"Exception/class.tx_oelib_Exception_AccessDenied.php";s:4:"0c1e";s:47:"Exception/class.tx_oelib_Exception_Database.php";s:4:"2064";s:55:"Exception/class.tx_oelib_Exception_EmptyQueryResult.php";s:4:"7174";s:47:"Exception/class.tx_oelib_Exception_NotFound.php";s:4:"3b07";s:24:"Geocoding/Calculator.php";s:4:"740a";s:19:"Geocoding/Dummy.php";s:4:"cc56";s:20:"Geocoding/Google.php";s:4:"73da";s:46:"Interface/class.tx_oelib_Interface_Address.php";s:4:"1c71";s:42:"Interface/class.tx_oelib_Interface_Geo.php";s:4:"6285";s:51:"Interface/class.tx_oelib_Interface_LoginManager.php";s:4:"e172";s:47:"Interface/class.tx_oelib_Interface_MailRole.php";s:4:"8e3a";s:29:"Interface/GeocodingLookup.php";s:4:"9959";s:22:"Interface/Identity.php";s:4:"8aad";s:22:"Interface/MapPoint.php";s:4:"f75e";s:22:"Interface/Sortable.php";s:4:"1f6a";s:44:"Mapper/class.tx_oelib_Mapper_BackEndUser.php";s:4:"27b1";s:49:"Mapper/class.tx_oelib_Mapper_BackEndUserGroup.php";s:4:"a253";s:40:"Mapper/class.tx_oelib_Mapper_Country.php";s:4:"3cc3";s:41:"Mapper/class.tx_oelib_Mapper_Currency.php";s:4:"e0cc";s:45:"Mapper/class.tx_oelib_Mapper_FrontEndUser.php";s:4:"3ff6";s:50:"Mapper/class.tx_oelib_Mapper_FrontEndUserGroup.php";s:4:"5bd5";s:41:"Mapper/class.tx_oelib_Mapper_Language.php";s:4:"143f";s:23:"Mapper/FederalState.php";s:4:"9516";s:42:"Model/class.tx_oelib_Model_BackEndUser.php";s:4:"c88c";s:47:"Model/class.tx_oelib_Model_BackEndUserGroup.php";s:4:"70cf";s:38:"Model/class.tx_oelib_Model_Country.php";s:4:"2251";s:39:"Model/class.tx_oelib_Model_Currency.php";s:4:"231c";s:43:"Model/class.tx_oelib_Model_FrontEndUser.php";s:4:"133a";s:48:"Model/class.tx_oelib_Model_FrontEndUserGroup.php";s:4:"a3cd";s:39:"Model/class.tx_oelib_Model_Language.php";s:4:"fdf6";s:22:"Model/FederalState.php";s:4:"792b";s:40:"Resources/Private/Language/locallang.xml";s:4:"0494";s:44:"TestExtensions/user_oelibtest/ext_emconf.php";s:4:"38b1";s:42:"TestExtensions/user_oelibtest/ext_icon.gif";s:4:"b4bf";s:44:"TestExtensions/user_oelibtest/ext_tables.php";s:4:"c99e";s:44:"TestExtensions/user_oelibtest/ext_tables.sql";s:4:"a0a5";s:58:"TestExtensions/user_oelibtest/icon_user_oelibtest_test.gif";s:4:"475a";s:46:"TestExtensions/user_oelibtest/locallang_db.xml";s:4:"32f9";s:37:"TestExtensions/user_oelibtest/tca.php";s:4:"eccc";s:45:"TestExtensions/user_oelibtest2/ext_emconf.php";s:4:"8df1";s:43:"TestExtensions/user_oelibtest2/ext_icon.gif";s:4:"b4bf";s:45:"TestExtensions/user_oelibtest2/ext_tables.php";s:4:"e2a6";s:45:"TestExtensions/user_oelibtest2/ext_tables.sql";s:4:"e709";s:60:"TestExtensions/user_oelibtest2/icon_user_oelibtest2_test.gif";s:4:"475a";s:47:"TestExtensions/user_oelibtest2/locallang_db.xml";s:4:"717d";s:38:"TestExtensions/user_oelibtest2/tca.php";s:4:"28b9";s:29:"Tests/Unit/AttachmentTest.php";s:4:"3beb";s:29:"Tests/Unit/AutoloaderTest.php";s:4:"2d13";s:38:"Tests/Unit/BackEndLoginManagerTest.php";s:4:"3dfb";s:30:"Tests/Unit/ConfigCheckTest.php";s:4:"f69f";s:37:"Tests/Unit/ConfigurationProxyTest.php";s:4:"401c";s:40:"Tests/Unit/ConfigurationRegistryTest.php";s:4:"db10";s:32:"Tests/Unit/ConfigurationTest.php";s:4:"eb6f";s:29:"Tests/Unit/DataMapperTest.php";s:4:"41ab";s:21:"Tests/Unit/DbTest.php";s:4:"0d76";s:35:"Tests/Unit/Double3ValidatorTest.php";s:4:"0a41";s:37:"Tests/Unit/Exception_DatabaseTest.php";s:4:"e4c2";s:30:"Tests/Unit/FakeSessionTest.php";s:4:"ff54";s:39:"Tests/Unit/FrontEndLoginManagerTest.php";s:4:"9fc0";s:37:"Tests/Unit/HeaderProxyFactoryTest.php";s:4:"9ea1";s:30:"Tests/Unit/IdentityMapTest.php";s:4:"dc80";s:23:"Tests/Unit/ListTest.php";s:4:"cd92";s:32:"Tests/Unit/MailerFactoryTest.php";s:4:"c130";s:23:"Tests/Unit/MailTest.php";s:4:"8204";s:33:"Tests/Unit/MapperRegistryTest.php";s:4:"4846";s:24:"Tests/Unit/ModelTest.php";s:4:"c014";s:32:"Tests/Unit/ObjectFactoryTest.php";s:4:"0731";s:25:"Tests/Unit/ObjectTest.php";s:4:"5d5e";s:29:"Tests/Unit/PageFinderTest.php";s:4:"ee84";s:29:"Tests/Unit/PhpMyAdminTest.php";s:4:"ad3a";s:37:"Tests/Unit/SalutationSwitcherTest.php";s:4:"1bae";s:26:"Tests/Unit/SessionTest.php";s:4:"dfe2";s:33:"Tests/Unit/TemplateHelperTest.php";s:4:"59f9";s:35:"Tests/Unit/TemplateRegistryTest.php";s:4:"58c2";s:27:"Tests/Unit/TemplateTest.php";s:4:"31aa";s:35:"Tests/Unit/TestingFrameworkTest.php";s:4:"3085";s:24:"Tests/Unit/TimerTest.php";s:4:"5539";s:37:"Tests/Unit/TranslatorRegistryTest.php";s:4:"c233";s:29:"Tests/Unit/TranslatorTest.php";s:4:"7c05";s:39:"Tests/Unit/Domain/Model/CountryTest.php";s:4:"4a64";s:44:"Tests/Unit/Domain/Model/FederalStateTest.php";s:4:"d301";s:54:"Tests/Unit/Domain/Repository/CountryRepositoryTest.php";s:4:"755e";s:59:"Tests/Unit/Domain/Repository/FederalStateRepositoryTest.php";s:4:"bc09";s:45:"Tests/Unit/Exception/EmptyQueryResultTest.php";s:4:"1093";s:70:"Tests/Unit/Fixtures/class.tx_oelib_Tests_Unit_Fixtures_NotIncluded.php";s:4:"0bf4";s:76:"Tests/Unit/Fixtures/class.Tx_Oelib_Tests_Unit_Fixtures_NotIncludedEither.php";s:4:"b23f";s:84:"Tests/Unit/Fixtures/class.Tx_oelib_Tests_Unit_Fixtures_NotIncludedFirstUppercase.php";s:4:"a384";s:91:"Tests/Unit/Fixtures/class.Tx_Oelib_Tests_Unit_Fixtures_NotIncludedUppercaseExtensionKey.php";s:4:"37a7";s:47:"Tests/Unit/Fixtures/ColumnLessTestingMapper.php";s:4:"67c6";s:42:"Tests/Unit/Fixtures/DummyObjectToCheck.php";s:4:"c4a3";s:29:"Tests/Unit/Fixtures/Empty.php";s:4:"c2fe";s:33:"Tests/Unit/Fixtures/locallang.xml";s:4:"c52b";s:46:"Tests/Unit/Fixtures/ModelLessTestingMapper.php";s:4:"1f24";s:30:"Tests/Unit/Fixtures/oelib.html";s:4:"59ca";s:37:"Tests/Unit/Fixtures/ReadOnlyModel.php";s:4:"dced";s:46:"Tests/Unit/Fixtures/TableLessTestingMapper.php";s:4:"279c";s:28:"Tests/Unit/Fixtures/test.css";s:4:"0acf";s:28:"Tests/Unit/Fixtures/test.png";s:4:"c7b6";s:30:"Tests/Unit/Fixtures/test_2.css";s:4:"4a4a";s:42:"Tests/Unit/Fixtures/TestingChildMapper.php";s:4:"42b3";s:41:"Tests/Unit/Fixtures/TestingChildModel.php";s:4:"a225";s:34:"Tests/Unit/Fixtures/TestingGeo.php";s:4:"306d";s:39:"Tests/Unit/Fixtures/TestingMailRole.php";s:4:"39db";s:37:"Tests/Unit/Fixtures/TestingMapper.php";s:4:"f950";s:39:"Tests/Unit/Fixtures/TestingMapPoint.php";s:4:"ac38";s:36:"Tests/Unit/Fixtures/TestingModel.php";s:4:"be63";s:37:"Tests/Unit/Fixtures/TestingObject.php";s:4:"eca2";s:49:"Tests/Unit/Fixtures/TestingSalutationSwitcher.php";s:4:"0b9c";s:45:"Tests/Unit/Fixtures/TestingTemplateHelper.php";s:4:"776f";s:36:"Tests/Unit/Fixtures/Xclass/Empty.php";s:4:"147c";s:79:"Tests/Unit/Fixtures/pi1/class.Tx_Oelib_Tests_Unit_Fixtures_pi1_NotIncluded1.php";s:4:"2222";s:39:"Tests/Unit/Geocoding/CalculatorTest.php";s:4:"7ed4";s:34:"Tests/Unit/Geocoding/DummyTest.php";s:4:"6662";s:35:"Tests/Unit/Geocoding/GoogleTest.php";s:4:"5cbd";s:42:"Tests/Unit/Mapper/BackEndUserGroupTest.php";s:4:"c866";s:37:"Tests/Unit/Mapper/BackEndUserTest.php";s:4:"a46e";s:33:"Tests/Unit/Mapper/CountryTest.php";s:4:"c550";s:34:"Tests/Unit/Mapper/CurrencyTest.php";s:4:"1f9f";s:38:"Tests/Unit/Mapper/FederalStateTest.php";s:4:"8cf3";s:43:"Tests/Unit/Mapper/FrontEndUserGroupTest.php";s:4:"556f";s:38:"Tests/Unit/Mapper/FrontEndUserTest.php";s:4:"8d86";s:34:"Tests/Unit/Mapper/LanguageTest.php";s:4:"a097";s:41:"Tests/Unit/Model/BackEndUserGroupTest.php";s:4:"0592";s:36:"Tests/Unit/Model/BackEndUserTest.php";s:4:"8ab5";s:32:"Tests/Unit/Model/CountryTest.php";s:4:"01a7";s:33:"Tests/Unit/Model/CurrencyTest.php";s:4:"2225";s:37:"Tests/Unit/Model/FederalStateTest.php";s:4:"7364";s:42:"Tests/Unit/Model/FrontEndUserGroupTest.php";s:4:"de11";s:37:"Tests/Unit/Model/FrontEndUserTest.php";s:4:"a6ef";s:33:"Tests/Unit/Model/LanguageTest.php";s:4:"4a99";s:35:"Tests/Unit/ViewHelper/PriceTest.php";s:4:"67e8";s:51:"Tests/Unit/ViewHelpers/GoogleMapsViewHelperTest.php";s:4:"9ba0";s:52:"Tests/Unit/ViewHelpers/ImageSourceViewHelperTest.php";s:4:"1b02";s:50:"Tests/Unit/ViewHelpers/UppercaseViewHelperTest.php";s:4:"4783";s:34:"Tests/Unit/Visibility/NodeTest.php";s:4:"23f9";s:34:"Tests/Unit/Visibility/TreeTest.php";s:4:"44e3";s:46:"ViewHelper/class.tx_oelib_ViewHelper_Price.php";s:4:"684f";s:45:"Visibility/class.tx_oelib_Visibility_Node.php";s:4:"2d6f";s:45:"Visibility/class.tx_oelib_Visibility_Tree.php";s:4:"530f";s:21:"contrib/PEAR/PEAR.php";s:4:"d5a4";s:22:"contrib/PEAR/PEAR5.php";s:4:"124a";s:26:"contrib/PEAR/Mail/mime.php";s:4:"55ee";s:30:"contrib/PEAR/Mail/mimePart.php";s:4:"3705";s:33:"contrib/emogrifier/emogrifier.php";s:4:"661a";s:30:"contrib/emogrifier/LICENSE.TXT";s:4:"8403";s:14:"doc/manual.sxw";s:4:"9ccf";}',
 	'constraints' => array(
 		'depends' => array(
 			'php' => '5.3.0-0.0.0',
-			'typo3' => '4.5.0-4.7.99',
+			'typo3' => '4.5.0-6.1.99',
 			'static_info_tables' => '2.0.8-',
 		),
 		'conflicts' => array(
 		),
 		'suggests' => array(
-			'extbase' => '1.3.0-4.7.99',
+			'extbase' => '1.3.0-6.1.99',
 		),
 	),
 	'suggests' => array(
